--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     
     <!-- ****************************************************************** -->
     <!-- ADSense Verification Code: Jab aap AdSense ke liye apply karte hain, toh woh aapko ek meta tag dete hain. Use yahan daalein. -->
-    <!-- <meta name="google-adsense-account" content="ca-pub-XXXXXXXXXXXXXXXX"> -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3454777726397900"
+     crossorigin="anonymous"></script><!--->
     <!-- ****************************************************************** -->
     
     <!-- Tailwind CSS CDN for modern design -->
