--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         
         <section class="mb-6">
             <h2 class="text-xl font-bold text-gray-700 mb-3 border-b pb-1">4. Contact Us (maliksaabm915@gmail.com)</h2>
-            <p class="text-gray-600">Agar aapke paas is Privacy Policy ke baare mein koi sawal hai, toh kripya is email address par sampark karein: **nomimalik554@gmail.com**</p>
+            <p class="text-gray-600">Agar aapke paas is Privacy Policy ke baare mein koi sawal hai, toh kripya is email address par sampark karein: **maliksaabm915@gmail.com**</p>
         </section>
 
         <div class="mt-8 text-center">
