--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!-- Privacy Policy file ka link -->
         <a href="privacy.html" class="text-blue-600 hover:text-blue-800 font-medium ml-4">Privacy Policy</a>
         <!-- Naye email address ke saath Contact Us link -->
-        <a href="mailto:nomimalik554@gmail.com" class="text-blue-600 hover:text-blue-800 font-medium ml-4">Contact Us</a>
+        <a href="mailto:maliksaabm915@gmail.com" class="text-blue-600 hover:text-blue-800 font-medium ml-4">Contact Us</a>
     </footer>
 
     <script>
